# wasm2rs

./: .gitmodules  Cargo.toml  README.md  justfile
crates/cli/: Cargo.toml
crates/cli/src/: bin.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: buffer.rs  compilation.rs  error.rs  func_validator_allocation_pool.rs  lib.rs  rust.rs  translation.rs  translation_old.rs
crates/compiler/src/buffer/: pool.rs  writer.rs
crates/compiler/src/rust/: ident.rs  keyword.rs  path.rs  writer.rs
crates/compiler/src/translation/: const_expr.rs  data_segment.rs  display.rs  export.rs  function.rs  function_types.rs  global.rs  import.rs  memory.rs
crates/convert/: Cargo.toml
crates/convert-wast/: Cargo.toml
crates/convert-wast/src/: error.rs  lib.rs  script.rs
crates/convert/src/: ast.rs  buffer.rs  context.rs  convert.rs  ident.rs  lib.rs  pool.rs  write.rs
crates/convert/src/ast/: arena.rs  expr_id.rs  print.rs
crates/convert/src/ast/print/: expression.rs  statements.rs
crates/convert/src/buffer/: pool.rs  writer.rs
crates/convert/src/convert/: allocations.rs  code.rs  constant.rs  func_validator_allocation_pool.rs  options.rs
crates/convert/src/convert/code/: builder.rs
crates/convert/src/ident/: any_ident.rs  boxed_ident.rs  mangled_ident.rs  safe_ident.rs
crates/convert/tests/: imports.wat  main.rs  simple.wat
crates/convert/tests/snapshots/: main__add_5.snap  main__imports.snap  main__memory.snap  main__simple.snap
crates/rt/: Cargo.toml
crates/rt-core/: Cargo.toml
crates/rt-core/src/: global.rs  lib.rs  limit.rs  symbol.rs  table.rs  thread.rs  trace.rs  trap.rs
crates/rt-core/src/table/: swap_guard.rs
crates/rt-func-ref/: Cargo.toml
crates/rt-func-ref/src/: error.rs  from_closure.rs  into_raw_func.rs  invoke.rs  lib.rs  raw.rs  signature.rs
crates/rt-func-ref/src/raw/: data.rs  vtable.rs
crates/rt-math/: Cargo.toml
crates/rt-math/src/: float.rs  lib.rs  nan.rs
crates/rt-memory/: Cargo.toml
crates/rt-memory-typed/: Cargo.toml
crates/rt-memory-typed/src/: lib.rs  pointer.rs  slice.rs
crates/rt-memory/src/: address.rs  empty.rs  error.rs  heap.rs  helpers.rs  hex_dump.rs  lib.rs  rc.rs
crates/rt-old/: Cargo.toml
crates/rt-old/src/: table.rs  trap.rs
crates/rt-simd/: Cargo.toml  build.rs
crates/rt-simd/src/: arch.rs  cfg.rs  intrinsics.rs  lib.rs  v128.rs
crates/rt-simd/src/v128/: fallback.rs  fshape.rs  i16x8.rs  i8x16.rs  interpretations.rs  ishape.rs  neon.rs  sse2.rs
crates/rt-simd/src/v128/sse2/: float.rs  integer.rs
crates/rt-spectest/: Cargo.toml
crates/rt-spectest/src/: host_ref.rs  imports.rs  lib.rs
crates/rt-spectest/tests/spec/: README.md  main.rs
crates/rt-spectest/tests/spec/converted/: .gitignore
crates/rt-stack/: Cargo.toml
crates/rt-stack/src/: lib.rs
crates/rt-table/: Cargo.toml
crates/rt-table/src/: array.rs  empty.rs  error.rs  heap.rs  helpers.rs  lib.rs  swap_guard.rs
crates/rt-umbrella/: Cargo.toml
crates/rt-umbrella/src/: embedder.rs  func_ref.rs  lib.rs  store.rs  trap.rs
crates/rt-umbrella/src/store/: allocate_memory.rs  allocate_table.rs
crates/rt-umbrella/src/trap/: trap_error.rs
crates/rt-umbrella/tests/it/: func_ref.rs  main.rs  table.rs
crates/rt-umbrella/tests/wat/: .gitignore  imports.rs  main.rs  memory.wat  ref_func.rs  ref_func.wat
crates/rt-wasip1/: Cargo.toml
crates/rt-wasip1/src/: api.rs  errno.rs  lib.rs  std_api.rs  trap.rs  wasi.rs
crates/rt-wasip1/src/api/: errno.rs  types.rs
crates/rt/src/: embedder.rs  func_ref.rs  global.rs  lib.rs  math.rs  memory.rs  simd.rs  stack.rs  trap.rs
crates/rt/src/func_ref/: call_null.rs  raw.rs  signature.rs
crates/rt/src/math/: soft_float.rs
crates/rt/src/memory/: allocation.rs  empty.rs  heap.rs  helpers.rs
crates/rt/src/simd/: arch.rs  v128.rs
crates/rt/src/simd/v128/: i8x16.rs
crates/rt/src/stack/: trace.rs
crates/rt/src/stack/trace/: wasm_symbol.rs
crates/rt/src/trap/: return_on_trap.rs  trap_value.rs
crates/rt/tests/it/: func_ref.rs  lib.rs
crates/spectest/: Cargo.toml
crates/spectest/src/: lib.rs  location.rs  pools.rs  test_case.rs
crates/spectest/src/test_case/: builder.rs  writer.rs
demo/python3/: Cargo.toml
demo/python3/src/: .gitignore  main.rs
demo/python3/wasm/: .gitignore
tests/compiler/: Cargo.toml  build.rs
tests/compiler/src/: imports.rs  lib.rs  memory.rs  memory.wat  simple.rs  simple.wat
tests/spec/: Cargo.toml  README.md  build.rs
tests/spec/src/: lib.rs  nan.rs
