[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
repository = "https://github.com/davnavr/wasm2rs"

[workspace]
resolver = "2"
members = [
    "crates/*"
]
exclude = [
    # Temporary
    "crates/compiler",
    "crates/rt-old",
    "crates/spectest",

    "tests/compiler"
]

[workspace.dependencies]
anyhow = "1.0.82"
crossbeam-queue = "0.3.11"
insta = "1.38.0"
num-traits = { version = "0.2.18", default-features = false }
rayon = "1.10.0"
wasm2rs-rt-core = { path = "crates/rt-core", default-features = false }
wasmparser = "=0.208.1"
wat = "1.208.1"
wast = "=208.0.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
