[package]
name = "wasm2rs"
description = "Compiler library for translating WebAssembly to Rust"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.81"
crossbeam-queue = "0.3.11"
bytes = "1.5.0"
indexmap = "2.2.5"
rayon = "1.9.0"
wasmparser = "0.201.0"
