[package]
name = "wasm2rs"
description = "Compiler library for translating WebAssembly to Rust"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
crossbeam-queue = { workspace = true }
bytes = "1.5.0"
indexmap = "2.2.5"
rayon = { workspace = true }
wasmparser = "0.201.0"
