[package]
name = "wasm2rs-convert"
description = "Library for converting WebAssembly binaries to Rust source code"
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ["rayon"]
rayon = ["dep:rayon", "crossbeam-queue"]

[dependencies]
anyhow = { workspace = true }
bytes = "1.5.0"
crossbeam-queue = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
unicode-xid = "0.2.4"
wasmparser = "0.201.0"

[dev-dependencies]
insta = { workspace = true }
wat = { workspace = true }
