[package]
name = "wasm2rs-rt-func-ref"
description = "Runtime support for function references in wasm2rs"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
test = false

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
paste = "1.0"
wasm2rs-rt-core = { workspace = true }
