[package]
name = "wasm2rs-rt-memory"
description = "Runtime support for linear memory in wasm2rs"
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["alloc", "num-traits/std"]
alloc = []

[dependencies]
num-traits = { workspace = true }
wasm2rs-rt-core = { workspace = true }
