[package]
name = "wasm2rs-rt-stack"
description = "Runtime support for stack overflow detection in wasm2rs"
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ["enabled", "std"]
std = ["wasm2rs-rt-core/std"]
enabled = ["std", "dep:stacker"] # `stacker` depends on `std`

[dependencies]
stacker = { version = "0.1.15", optional = true }
wasm2rs-rt-core = { workspace = true, default-features = false }
