[package]
name = "wasm2rs-rt"
description = "Runtime support crate for wasm2rs"
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = [
    "std",
    "simd-intrinsics",
    "feature-simd128",
]
std = [
    "alloc",
    "wasm2rs-rt-core/std",
    "rt-func-ref/std",
    "rt-math/std",
    "rt-memory/std",
    "rt-simd?/std",
    "rt-stack/std",
    "rt-table/std",
]
alloc = [
    "rt-memory/alloc",
    "rt-table/alloc",
]

simd-intrinsics = ["rt-simd?/simd-intrinsics"]
stack-overflow-checks = ["rt-stack/enabled"]

feature-simd128 = ["dep:rt-simd"]

[dependencies]
wasm2rs-rt-core = { workspace = true, default-features = false }

[dependencies.rt-func-ref]
package = "wasm2rs-rt-func-ref"
path = "../rt-func-ref"
default-features = false

[dependencies.rt-stack]
package = "wasm2rs-rt-stack"
path = "../rt-stack"
default-features = false

[dependencies.rt-math]
package = "wasm2rs-rt-math"
path = "../rt-math"
default-features = false

[dependencies.rt-memory]
package = "wasm2rs-rt-memory"
path = "../rt-memory"
default-features = false

[dependencies.rt-table]
package = "wasm2rs-rt-table"
path = "../rt-table"
default-features = false

[dependencies.rt-simd]
package = "wasm2rs-rt-simd"
path = "../rt-simd"
default-features = false
optional = true
