[package]
name = "wasm2rs-rt-wasip1"
description = "Runtime support for WASI preview 1 applications translated by wasm2rs"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[features]
default = ["std"]
std = ["alloc", "wasm2rs-rt-core/std"]
alloc = []

[dependencies]
bitflags = "2.5.0"
wasm2rs-rt-core = { workspace = true }
wasm2rs-rt-memory = { path = "../rt-memory" }
wasm2rs-rt-memory-typed = { path = "../rt-memory-typed" }
