[package]
name = "wasm2rs-rt"
description = "Runtime support library for WebAssembly modules translated to Rust"
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ["std", "backtrace", "stack-overflow-detection"]
std = ["alloc", "num-traits/std"]
alloc = []
backtrace = ["std", "dep:backtrace"]
stack-overflow-detection = ["std", "dep:stacker"]

[dependencies]
backtrace = { version = "0.3.71", optional = true, default-features = true }
num-traits = { version = "0.2.18", default-features = false }
stacker = { version = "0.1.15", optional = true }

[[test]]
name = "it"
path = "tests/it/lib.rs"
